# docker_practice

./: Dockerfile  README.md  docker-compose.yaml  docker-compose1.yml  docker-compose_expl.yaml  pyproject.toml
app/: ruff.toml
