[project]
name = "docker-webapp"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "An easy to use API to check the latest global currency rates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]